// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> should render radio button component 1`] = `
<View
  accessibilityLabel="Select information"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#0000004D",
      "borderRadius": 15.714285714285714,
      "borderStyle": "solid",
      "borderWidth": 3.142857142857143,
      "height": 31.428571428571427,
      "justifyContent": "center",
      "opacity": 1,
      "width": 31.428571428571427,
    }
  }
  testID="testing_radio_btn"
/>
`;

exports[`<RadioButton /> should render radio button component with custom checked 1`] = `
<View
  accessibilityLabel="Select information"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#0000004D",
      "borderRadius": 15.714285714285714,
      "borderStyle": "solid",
      "borderWidth": 3.142857142857143,
      "height": 31.428571428571427,
      "justifyContent": "center",
      "opacity": 1,
      "width": 31.428571428571427,
    }
  }
  testID="testing_radio_btn"
>
  <View
    internalSize={10}
    style={
      Array [
        Object {
          "backgroundColor": "#C6B09E",
          "borderRadius": 7.857142857142857,
          "height": 15.714285714285714,
          "width": 15.714285714285714,
        },
      ]
    }
  />
</View>
`;

exports[`<RadioButton /> should render radio button component with custom checked radio button color 1`] = `
<View
  accessibilityLabel="Select information"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#0000004D",
      "borderRadius": 15.714285714285714,
      "borderStyle": "solid",
      "borderWidth": 3.142857142857143,
      "height": 31.428571428571427,
      "justifyContent": "center",
      "opacity": 1,
      "width": 31.428571428571427,
    }
  }
  testID="testing_radio_btn"
/>
`;

exports[`<RadioButton /> should render radio button component with custom internal size 1`] = `
<View
  accessibilityLabel="Select information"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#0000004D",
      "borderRadius": 15.714285714285714,
      "borderStyle": "solid",
      "borderWidth": 3.142857142857143,
      "height": 31.428571428571427,
      "justifyContent": "center",
      "opacity": 1,
      "width": 31.428571428571427,
    }
  }
  testID="testing_radio_btn"
/>
`;

exports[`<RadioButton /> should render radio button component with custom radio button color 1`] = `
<View
  accessibilityLabel="Select information"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#3498db",
      "borderRadius": 15.714285714285714,
      "borderStyle": "solid",
      "borderWidth": 3.142857142857143,
      "height": 31.428571428571427,
      "justifyContent": "center",
      "opacity": 1,
      "width": 31.428571428571427,
    }
  }
  testID="testing_radio_btn"
/>
`;

exports[`<RadioButton /> should render radio button component with custom size 1`] = `
<View
  accessibilityLabel="Select information"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#0000004D",
      "borderRadius": 18.857142857142858,
      "borderStyle": "solid",
      "borderWidth": 3.142857142857143,
      "height": 37.714285714285715,
      "justifyContent": "center",
      "opacity": 1,
      "width": 37.714285714285715,
    }
  }
  testID="testing_radio_btn"
/>
`;
